--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,5 @@
-plugins {
-    id 'java'
-    id 'net.minecrell.licenser' version '0.2'
-}
+apply plugin: 'java'
+apply plugin: 'net.minecrell.licenser'
 
 sourceCompatibility = '1.8'
 targetCompatibility = '1.8'
