--- a/build.gradle
+++ b/build.gradle
@@ -29,6 +29,21 @@ license {
     style.java = 'JAVADOC'
 }
 
+task sourcesJar(type: Jar, dependsOn: classes) {
+    classifier = 'sources'
+    from sourceSets.main.allSource
+}
+
+task javadocJar(type: Jar, dependsOn: javadoc) {
+    classifier = 'javadoc'
+    from javadoc.destinationDir
+}
+
+artifacts {
+    archives sourcesJar
+    archives javadocJar
+}
+
 task wrapper(type: Wrapper) {
     gradleVersion = '2.11'
 }
