--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,18 @@
+buildscript {
+    repositories {
+        maven {
+            name = 'gradle-plugins'
+            url = 'https://plugins.gradle.org/m2'
+        }
+    }
+    
+    dependencies {
+        classpath 'gradle.plugin.net.minecrell:licenser:0.2.1'
+    }
+}
+
 apply plugin: 'java'
+apply plugin: 'maven'
 apply plugin: 'net.minecrell.licenser'
 
 sourceCompatibility = '1.8'
