--- a/build.gradle
+++ b/build.gradle
@@ -27,7 +27,7 @@ repositories {
 }
 
 dependencies {
-    compile "org.spongepowered:spongeapi:5.0.0-SNAPSHOT"
+    compile 'org.spongepowered:spongeapi:5.0.0-SNAPSHOT'
 }
 
 license {
