The grand update

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,6 +1,6 @@
 name=XtraAPI
-url=https://github.com/XtraStudio
-organization=XtraStudio
+organization=LaXamer
+url=https://github.com/LaXamer
 version=1.0
 inceptionYear=2016
-currentYear=2016
+currentYear=2018
